update dependencies, remove moshi (dont want kotlin compile)